[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/global/music_manager.gd" type="Script" id=1]
[ext_resource path="res://src/sound/music/PeriTune-Gothic_Cute_inst.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/sound/music/pixabay_heart-beat-of-a-dream.mp3" type="AudioStream" id=3]

[node name="MusicManager" type="Node2D"]
script = ExtResource( 1 )

[node name="FadeMusicOut" type="Tween" parent="."]

[node name="FadeMusicIn" type="Tween" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
mix_target = 2
bus = "music"

[node name="HeartBeatMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.622
bus = "music"

[connection signal="tween_completed" from="FadeMusicOut" to="." method="_on_FadeMusicOut_tween_completed"]
